# MedSync

./: .gitignore  README.md  package-lock.json  package.json
app/: package.json
app/src/: App.tsx  index.css
app/src/abi/: Contract_ABI.ts
app/src/api/: clientApi.ts  healthDataApi.ts
app/src/api/dataSource/: ClientApiDataSource.ts
app/src/components/: ConsentManager.tsx  ErrorMessage.tsx  Layout.tsx  Navigation.tsx  ProtectedRoute.tsx  RecordList.tsx  starknet-provider.tsx
app/src/components/shared/: Card.tsx  LoadingState.tsx
app/src/contexts/: AuthContext.tsx  ThemeContext.tsx
app/src/pages/home/: index.tsx
app/src/pages/hospital/: HospitalDashboard.tsx
app/src/pages/login/: Authenticate.tsx  RoleSelection.tsx
app/src/pages/patient/: AddRecordForm.tsx  PatientDashboard.tsx
app/src/pages/reward-pool/: RewardPool.tsx  RewardPoolCreator.tsx  RewardPoolUser.tsx
app/src/types/: HealthTypes.tsx
app/src/utils/: ProofGeneration.ts  UserIdGenerate.ts  node.ts  storage.ts
contract/: Scarb.toml
contract/src/: lib.cairo
docs/: INSTALL.md
logic/: Cargo.toml
logic/res/: healthcare_data.wasm
logic/src/: lib.rs
