[package]
name = "healthcare-data"
description = "Calimero healthcare data management application"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use the correct branch and features
calimero-sdk = { git = "https://github.com/calimero-network/core", branch = "master" }
calimero-storage = { git = "https://github.com/calimero-network/core", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
borsh = "1.5.1"
hex = "0.4.3"

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false 
panic = "abort"
overflow-checks = true
